bugfixes:
- `fragments` class query should be querying for class `fragment` like everybody else
- transforms were always applied double on Chrome: fixed
- kill the CSS which nuked the overview mode by clipping everything in there outside the rectangle of the active slide
- refactored the (queued) transforms: now there's clearly a 'resetElementTransform()' function instead of checking for magic argument values (i.e. check for `null`)
- there's still trouble with scale calculations when the slide(s) are not visible; a CSS/JS hack forces the slide wrapper et al also to become visible when measuring the slide to prevent measurements to produce zero width/height
- `DEBUG_SHOW_ALL` code would nuke the present/past/future class management of the slides so we removed this option and code.
- made `readURL()` act correctly given the new `writeURL()` code obtained from the latest Hakim original (slightly tweaked)
-

features:

- added simplifiedOverview option: default is false (disabled)

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -627,9 +627,9 @@ body
         -ms-transform-style: preserve-3d;
             transform-style: preserve-3d;
 
-  -webkit-transition: -webkit-transform-origin 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), -webkit-transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-          transition: -ms-transform-origin 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-          transition: transform-origin 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); 
+  -webkit-transition: -webkit-transform-origin 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), -webkit-transform 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 2s cubic-bezier(0.26, 0.86, 0.44, 0.985);
+          transition: -ms-transform-origin 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), transform 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 2s cubic-bezier(0.26, 0.86, 0.44, 0.985);
+          transition: transform-origin 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), transform 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), visibility 2s cubic-bezier(0.26, 0.86, 0.44, 0.985), opacity 2s cubic-bezier(0.26, 0.86, 0.44, 0.985); 
 }
 
 .reveal .slides > section.visible,
@@ -650,8 +650,13 @@ body
     height: auto;
 }
 
+/* and make sure the slide we're currently measuring up for scaling is indeed visible */
+.reveal .slide-measurement {
+    display: block !important;
+}
+
 .reveal.center .slides {
-    overflow: hidden;
+    /* overflow: hidden; -- this breaks the overview badly by clipping everything outside the active slide */
 }
 .reveal.center .slides section.visible.scrollable-slide {
     /* overflow: auto; */
@@ -671,9 +676,9 @@ body
     display: -ms-flexbox;
     display: flex;
 
-    -webkit-box-sizing: content-box;
-       -moz-box-sizing: content-box;
-            box-sizing: content-box;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
     /*
         Together with the flex box model, this will ensure slides are centered by simply setting their height.
      */
